Adjusted welcome section height to fit-content and welcome-text to position relative to display correctly on landscape phones and smaller phones. Also changed padding on the logo to be more centered on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ h1 {
     color: #fcb935;
     border-radius: 20px;
     text-align: center;
-    padding: 15px 0 10px 60px;
+    padding: 5px 10px;
 }
 
 #menu {
@@ -134,13 +134,13 @@ main {
 /* Welcome section */
 #welcome {
     width: 100%;
-    height: 75vh;
+    height: fit-content;
     position: relative;
     top: 100%;
 }
 
 .welcome-text {
-    position: absolute;
+    position: relative;
     text-align: start;
     padding: 50px 10px;
     background-color: rgba(18, 31, 40, 0.7);
